--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://r0hanshah.github.io/dog-app",
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,5 +44,4 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   }
-  
 }
